# ComfyGCS

./: .env  .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/: client.py  mapping.py
src/nodes/: load_image_gcs.py  save_image_gcs.py
tests/: e2e_test.py
