[project]
name = "comfyui-google-storage"
description = ""
version = "1.0.9"
license = { file = "LICENSE" }
dependencies = ["google-cloud-storage","python-dotenv"]

[project.urls]
Repository = "https://github.com/benmizrahi/ComfyGCS"

[tool.comfy]
PublisherId = "benmizrahi"
DisplayName = "ComfyGCS"
Icon = ""